--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&display=optimal"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/4569e946ea.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body></body>
 </html>
