Building the navbar component

--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800;900&display=optimal"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    />
     <script
       src="https://kit.fontawesome.com/4569e946ea.js"
       crossorigin="anonymous"
     ></script>
+    <script src="/js/main.js"></script>
   </head>
   <body></body>
 </html>
